[tool.poetry]
name = "leafsim"
version = "0.1.1"
description = "A simulator for Large Energy-Aware Fog computing environments."
authors = ["Philipp Wiesner <wiesner@tu-berlin.de>"]
license = "MIT"
repository = "https://github.com/dos-group/leaf"
readme = "README.md"
keywords = ["simulation", "modeling", "fog computing", "energy consumption", "edge computing"]
packages = [{ include = "leaf" }]
exclude = ["leaf/examples"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.7.9"
simpy = "^4.0.0"
networkx = "^2.5"
numpy = "^1.20.0"
pandas = "^1.2.1"
tqdm = "^4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
